--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+  <meta name="description"
+        content="Finde schnell und einfach SBB-Verbindungen mit Abfahrtszeit, Dauer und Umstiegen. Fahrplan-Suche mit Autocomplete und Echtzeitdaten.">
+
   <title>SBB Fahrplan</title>
   <link rel="stylesheet" href="formular-css.css">
 </head>
@@ -88,8 +92,10 @@
   </form>
 
   <!-- RESULTS -->
+
+  
   <div id="results" class="hidden results-box">
-    <h3>Verbindungen</h3>
+    Verbindungen
 
     <div id="loader" class="loader hidden"></div>
 
