--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   
   <div id="results" class="hidden results-box">
-    Verbindungen
+    <strong>Verbindungen</strong>
 
     <div id="loader" class="loader hidden"></div>
 
